add_library(blast_core STATIC
  blast_encoding.c
  blast_filter.c
  blast_message.c
  blast_options.c
  blast_program.c
  blast_psi_priv.c
  blast_query_info.c
  blast_seg.c
  blast_stat.c
  blast_util.c
  ncbi_erf.c
  ncbi_math.c
  ncbi_std.c
  raw_scoremat.c
  sm_blosum45.c
  sm_blosum50.c
  sm_blosum90.c
  sm_blosum62.c
  sm_blosum80.c
  sm_pam30.c
  sm_pam70.c
  sm_pam250.c)
